# auto-screenshooter

./: .gitignore  README.md  client_id_template.json  pyproject.toml
src/auto_screenshooter/: __main__.py  main.py  photos_api.py
